@@ -391,6 +391,7 @@ typedef struct Settings {
     int     armor_speed_improvement;    /* Speed improvement */
     uint8   armor_speed_linear;         /* If 1, speed improvement is linear, else exponantiel */
     uint8   no_player_stealing;     /* If 1, can not steal from other players */
+    uint8   create_home_portals;     /* If 1, can create portals in unique maps (apartments) */
 } Settings;
 
 extern Settings settings;
